[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "visible_residues"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.md'
dynamic = ["version", "description"]
requires-python = "~=3.10"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
]

[project.optional-dependencies]
test = [
  'pytest',
  'parametrize_from_file',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'myst_parser',
  'autoclasstoc',
]

[project.urls]
'Documentation' = 'https://visible-residues.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/visible_residues'
'Bug Tracker' = 'https://github.com/kalekundert/visible_residues/issues'
'Continuous Integration' = 'https://github.com/kalekundert/visible_residues/actions'
'Test Coverage' = 'https://app.codecov.io/github/kalekundert/visible_residues'

[tool.ruff.lint]
select = ["F"]
ignore = ["F405", "F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.coverage.run]
branch = true
parallel = true
source = ['visible_residues']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.semantic_release]
version_variables = ['visible_residues/__init__.py:__version__']
build_command = 'python -m pip install build && python -m build'
major_on_zero = false
